--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,8 +31,8 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     permissions:
+      artifact-metadata: write
       contents: read
-
     steps:
 
     - name: Start Xvfb
