--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -7,13 +7,18 @@ on:
   pull_request:
     branches: [ "Gnarks-pmd", "main" ]
 
-steps:
-  - uses: actions/checkout@v6
-  - uses: actions/setup-java@v5
-    with:
-      distribution: 'temurin'
-      java-version: '24'
-  - uses: pmd/pmd-github-action@v2
-    with:
-      rulesets: ‘category/java/errorprone.xml’
+
+
+
+jobs:
+  pmd:
+    steps:
+      - uses: actions/checkout@v6
+      - uses: actions/setup-java@v5
+        with:
+          distribution: 'temurin'
+          java-version: '24'
+      - uses: pmd/pmd-github-action@v2
+        with:
+          rulesets: ‘category/java/errorprone.xml’
 
