added runs-on ubuntu and permissions

--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -12,6 +12,9 @@ on:
 
 jobs:
   pmd:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-java@v5
