--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -24,4 +24,7 @@ jobs:
       - uses: pmd/pmd-github-action@v2
         with:
           rulesets: 'category/java/errorprone.xml'
+      - name: Fail build if there are violations
+        if: steps.pmd.outputs.violations == 2
+        run: exit 1
 
