--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -23,7 +23,7 @@ jobs:
           java-version: '24'
       - uses: pmd/pmd-github-action@v2
         with:
-          sourcePath: '../../app/src/main/java/org/example/'
+          sourcePath: './app/src/main/java/org/example/'
           rulesets: 'category/java/errorprone.xml'
       - name: Fail build if there are violations
         if: steps.pmd.outputs.violations == 2
