--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -27,6 +27,6 @@ jobs:
           sourcePath: 'app/src/main/java'
           rulesets: 'category/java/errorprone.xml'
       - name: Fail build if there are violations
-        if: steps.pmd.outputs.violations == 2
+        if: steps.pmd.outputs.violations >= 50
         run: exit 1
 
