--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -29,4 +29,8 @@ jobs:
       - name: Fail build if there are violations
         if: steps.pmd.outputs.violations >= 50
         run: exit 1
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: pmd-report.sarif
 
