--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      security-events: read
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-java@v5
